# test_claude_pa

./: .gitattributes  .gitignore  01_TargetEncoding_cuDF.ipynb  02_CountEncoding_cuDF.ipynb  03_TrainModels_cuML.ipynb  AWS Pricing Pages Links _ Coursera.html  Advanced Prophet Configuration.ipynb  Best Practices and Tips.ipynb  Dockerfile  Dockerfile.chatgpt  Hyperparameter Optimization.ipynb  IMPLEMENTATION_GUIDE.md  MCP servers.pptx  Model Monitoring and Maintenance.ipynb  Model Validation and Performance Assessment.ipynb  Prediction_best_model.ipynb  README.md  README_ES.md  README_INSTALLATION.md  Readme.md  Readme_es.md  Wheat price monitoring dashboard_supply_demand.xlsx  __init__.py  ai_research_implementation.py  app.py  audio_debug_script.py  azure-pipelines-nats.yml  azure-pipelines.yml  backup-certs.sh  basic_analysis.py  batch_process.sh  check_server_endpoints.py  claude_desktop.config.json  cli_servers_config.json  client.py  cltv_ai_agent.py  cltv_chat_interface.py  cltv_simulator.py  cltv_simulator_ai.py  cltv_simulator_enhanced.py  (+112 more)
DICOM_FHIR/: Readme_en.md  Readme_es.md  dicom.pptx  example_dicom_image_redactor.ipynb  request_dicom.ipynb  treat dicom images-2.ipynb  treat dicom images-3.ipynb  treat dicom images.ipynb
Nats/: Readme_en.md  Readme_es.md  consumer.ipynb  publisher-files.ipynb  publisher-messages.ipynb
OCR/: OCR.csproj  OCR.sln
PA/: main.py  neo4j_session_processor.py  neo4j_visitor_relationship_processor.py  pipeline.py  readme.md  requirements.txt  run_embedding.py  scan_processor.py  session_embedding_processor.py
PII-DICOM/: batch_dicom.py  batch_processing.py
RAG/connor-rsi/: Readme.md  Readme_es.md  explain_en.md  explain_es.md  pyproject.toml  requirements.txt
admin/: Dockerfile  endpoint_admin_models.py  requirements.txt
app/: index.json  main.py  neo4j_job_stream_processor.py  neo4j_session_processor.py  neo4j_specialization_stream_processor.py  neo4j_visitor_processor.py  neo4j_visitor_relationship_processor.py  registration_processor.py  requirements.txt  run_recommendations.py  scan_processor.py  session_embedding_processor.py  session_processor.py  session_recommendation_processor.py  setup.py
arc/: config.py  env.py  mcp.py  models.py  prompts.py
archive/: __init__.py  create_chunks.py  demodata.py  examples.py  storage.py  test_ollama.py
audio/: Dockerfile  requirements.txt
azureml/: main.py  requirements.txt
azureml_pipeline/: azureml_step1_data_prep.py  azureml_step2_neo4j_prep.py  azureml_step3_session_embedding.py  azureml_step4_recommendations.py
classification/: Dockerfile_en  Dockerfile_it  endpoint_classification.py  endpoint_classification_no_proxy.py  readme.md  requirements.txt
classification_nats/: Dockerfile  Dockerfile_de  Dockerfile_en  Dockerfile_es  __init__.py  endpoint_classification_nats.py  readme.md  requirements.txt
deep_agents_reports/: .gitignore  README.md  __init__.py  deep_agents_workflow.py  enrich_report.py  pyproject.toml  reporting_pipeline.py  requirements.txt
deep_agents_reports/arc/: __init__.py  agents.py  config.py  env.py  mcp_utils.py  workflow.py
deep_agents_reports/arc/pre_show/: backends.py  generator.py  manifest.py  prompts.py
deep_agents_reports/config/: config_cpcn.yaml  config_ecomm.yaml  config_tsl.yaml  config_vet_bva.yaml  config_vet_lva.yaml  reporting_pipeline.yaml
deep_agents_reports/docs/: deep_agents_application_overview.md  executive_summary.md  executive_summary_non_technical.md  generic_pre_show_report_prompt.md  pre_show_agent_protocol.md  readme_config.md
deep_agents_reports/reports/: Task_01_Summary.md  Task_02_Demographic_Analysis_Summary.md  report_cpcn_13112025.md  report_cpcn_13112025_after_database_reconstruction.md  report_cpcn_13112025_short.md  report_cpcn_engagement_08102025.md  report_cpcn_post_02122025.md  report_cpcn_post_summary_02122025.md  report_cpcn_post_summary_w_registration_04122025.md  report_cpcn_post_w_registration_04122025.md  report_ecomm_11092025.md  report_ecomm_18082025.md  report_ecomm_23092025.md  report_ecomm_post_09102025.md  report_lva_03102025.md  report_lva_07112025.md  report_lva_23092025.md  report_lva_post_show_28112025.md  report_lva_post_show_summary_28112025.md  report_tsl_20260211.md  report_tsl_20260214.md  report_tsl_20260218.md  report_tsl_updated_sections.md
deep_agents_reports/reports/prompts/: aimart_system_prompt.md  prompt_increment_run.md  prompt_initial_run.md  prompt_initial_run_generic.md  prompt_initial_run_generic_short.md  prompt_post_show.md  prompt_post_show_generic.md  prompt_post_show_summary_generic.md  prompt_post_show_v2.md
deep_agents_reports/reports/prompts/post-analysis-v2/: post_show_evaluation_framework.md  prompt_post_show_generic.md  prompt_post_show_summary_generic.md  prompt_post_show_tsl_2026_long.md  prompt_post_show_tsl_2026_short.md
mcp/chainlit_bot/: .gitignore  README.md  Readme_es.md  app.py  chainlit_en.md  chainlit_es.md  debug_mcp.py  mcp_client.py  mcp_config.json  pyproject.toml  requirements.txt  setup.py  test_hubspot.py  test_mcp.py  test_neo4j.py  test_schema.py  test_workflow.py  working_tools.json
mcp/chainlit_bot/archive/: _main.py
mcp/mcp-client/: 4_indicators_tesla_analisys.md  README.md  Readme_es.md  explanation_en.md  index.js  prompts.txt  pyproject.toml  technical_analisys_APPL.md  technical_analisys_MSFT.md  technical_analisys_Tesla.md
pdf-processor-mcp/: Dockerfile  install.sh  install_windows_uv.bat  install_windows_uv.ps1  main.py  pyproject.toml  readme_windows.md  requirements.txt  server.py
server/: main.py  mcp_server_sse.py  pyproject.toml
server/strategies/: bollinger_fibonacci.py  bollinger_zscore.py  comprehensive_analysis.py  comprehensive_market_scanner.py  connors_zscore.py  dual_moving_average.py  enhanced_market_scanner.py  macd_donchian.py  performance_tools.py  unified_market_scanner.py
server/utils/: yahoo_finance_tools.py
(+1112 files in other folders)
