[project]
name = "pdf-processor-mcp"
version = "1.0.0"
description = "MCP Server for PDF document processing with custom prompts"
requires-python = ">=3.8"

dependencies = [
    "mcp[cli]>=1.2.0",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "pdf-processor-mcp",
]
