[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.4.3",
    "loguru>=0.7.3",
    "mcp[cli]>=1.7.1",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.58",
]
