[project]
name = "connor-rsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "detectaicore>=0.0.29",
    "google-cloud-aiplatform>=1.95.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.0.10",
    "langchain-google-vertexai>=2.0.24",
    "langchain-openai>=0.3.18",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.7",
    "matplotlib>=3.10.3",
    "mcp>=1.9.1",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pymupdf>=1.26.0",
    "pymupdf4llm>=0.0.24",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-pdf-viewer>=0.0.23",
    "tavily-python>=0.7.3",
    "xmltodict>=0.14.2",
    "yfinance>=0.2.61",
]
