[project]
name = "mcp-neo4j-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "anthropic>=0.52.0",
    "chainlit>=2.5.5",
    "httpx>=0.28.1",
    "mcp>=1.9.1",
    "mcp-neo4j-cypher>=0.2.1",
    "msoffcrypto-tool>=5.4.2",
    "neo4j>=5.26.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "openai-agents==0.0.11",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.10.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
]
