[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "anthropic>=0.52.0",
    "docx2pdf>=0.1.8",
    "httpx>=0.28.1",
    "mcp>=1.9.1",
    "msoffcrypto-tool>=5.4.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
]
